# claude-companion

./: .gitignore  CLAUDE.md  MILESTONES.md  Makefile  README.md  pyproject.toml
src/claude_code_assist/: __init__.py  config.py  io.py  llm_client.py
src/claude_code_assist/art/: __init__.py  client.py  generator.py  meta.py  placeholder.py  process.py  prompts.py
src/claude_code_assist/cli/: __init__.py  _levelup_flow.py  art.py  levelup.py  new.py  roster.py
src/claude_code_assist/commentary/: __init__.py  generator.py  prompts.py
src/claude_code_assist/models/: __init__.py  companion.py  rarity.py  role.py  stats.py
src/claude_code_assist/monitor/: __init__.py  parser.py  text_watcher.py  watcher.py
src/claude_code_assist/profile/: __init__.py  generator.py  leveling.py  storage.py
src/claude_code_assist/qt/: __init__.py  app.py  backend.py  bubble.py  controller.py  macos_polish.py  settings.py  sprites.py  tray.py  view.py
